src/main/webapp/stylesheet.css
/*
To change this license header, choose License Headers in Project Properties.
To change this template file, choose Tools | Templates
and open the template in the editor.
*/
/* 
    Created on : Apr 7, 2016, 4:43:12 PM
    Author     : Henrikas
*/

.styled-table td, .styled-table th{
    margin: 0;
    border: 1px solid gray;
    padding: 0.4em;
}

.window-content {
    display: inline;
    margin: 10px;
}

.window-menu {
    float: left;
    display: inline;
}

.hint {
    min-width: 20em;
    margin-bottom: 0.4em;
    color: black;
    padding: 0.7em 0.5em 0.7em 0.2em;
    border-radius: 0.5em;
}

.step-header {
    width: calc(100% - 1.6em);
    font-family: 'Arial';
    color: black;
    background-color: #e6e6e6;
    padding: 0.7em;
    margin: 1em 0 0.5em 0;
    border: 1px solid black;
}

.reservation-period {
    padding: 0.3em 0.3em 0em 0.3em;
}

.formGrid.ui-panelgrid>*>tr,
.formGrid.ui-panelgrid .ui-panelgrid-cell {
    border: none;
}

.butt {
    margin: 0.8em 0 0.5em 0;
    padding: 0.5em 0.5em 0.5em 0.5em;

    display: inline-block;
    min-width: 10em;

    font-family: 'Arial';
    font-size: 0.8em;
    color: white;
    text-align: center;

    background-color: #63b55b;
    border: 2px solid #63b55b;
    border-radius: 0.2em;
    cursor: pointer;
    
    text-decoration: none;
 }
 
 .butt:hover, .butt:active  {
    color: white;
    background-color: #71c669;
}

.orange {
    background-color: #ff8533;
    border-color: #ff751a;
}

.orange:hover, .orange:active {
    background-color: #ffa366;
}

.ui_tpicker_minute_label{
    display:none;
}

.ui_tpicker_minute{
    display:none;
}

.extra-calendar {
    white-space: nowrap;
}

.hasDatepicker {
    display: inline-block;
}

.ui-datepicker-trigger {
    display: inline-block;
}

